[package]
name = "yisangsay"
version = "0.1.0"
edition = "2024"
description = "Yisangsay is a CLI program like cowsay, but instead of a talking cow, it's Yi Sang from Limbus Company!"
license = "GPL-3.0"
repository = "https://github.com/VectorSophie/yisangsay-rs"
authors = ["VectorSophie <jay7math@gmail.com>"]

[dependencies]
lazy_static = "1.4"
clap = {version = "4.5", features = ["derive"]}
crossterm = "0.29"
rand = "0.9"
tokio = { version = "1.0", features = ["full"] }
